all routes working for api calls
